@@ -3,30 +3,25 @@ Dear GMT user-
 We are pleased to announce the release of GMT version 4.5.2.
 This release mostly fixes several bugs but also adds some new
 functionality, such as a math graph mode and a curved arrow
-symbol in psxy[z].  Finally, we needed to make a small revision
-to the netcdf GSHHS files (2.0.2) to correct a pscoast bug.
-Note GSHHS 2.0.2 is required for GMT 4.5.2.
+symbol in psxy[z] (see new example 30).  We also had to make
+a small change to the netCDF GSHHS files (2.0.2) to correct
+a pscoast bug. Note GSHHS 2.0.2 is required for GMT 4.5.2.
 
 For a complete list of enhancements and features, please
 see Chapter 1 in the Technical Reference & Cookbook or
 follow the RELEASES link on the updated GMT web page
 (http://gmt.soest.hawaii.edu).
 
-As of this notice, all but the Japan and S Africa mirror
-ftp servers are now synced up; we hope those two will follow
+As of this notice, all but the Japan, Vienna and S Africa mirror
+ftp servers are now synced up; we hope those three will follow
 within 24 hours.  Alternatively, OS X users will find GMT 4.5.2
 and GSHHS 2.0.2 in Fink's 'unstable' tree.
 
 Finally, 4.5.2 is the last GMT 4 release with new features.
-All development is now focused on GMT 5.  However, we expect
-to issue more 4.5.? releases (to fix bugs only) until a stable
+All development is now focused on GMT 5.  However, we expect to
+issue additional 4.5.? releases (bug fixes only) until a stable
 GMT 5 is announced.  We expect to release a beta version of GMT
 5 later this spring.
-
-As of this notice, all but the Japan, Vienna and S Africa mirror
-ftp servers are now synced up; we hope those two will follow
-within 24 hours.
-
 
 Sincerely,
 
